<resources>
    <string name="app_name">Hymnary</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="favorites">Favorites</string>
    <string name="my_hymns">My Hymns</string>
    <string name="personal">Personal</string>
    <string name="rch">RCH</string>
    <string name="revised_church_hymnary">Revised Church Hymnary</string>
    <string name="hymm_books">Hymm Books</string>
    <string name="sss">SS&amp;S</string>
    <string name="phb">PHB</string>
    <string name="sss_title_string">Sacred Songs and Solos</string>
    <string name="phb_title_string">Presbyterian Hymn Book</string>
    <string name="add_hymn">Add Hymn</string>
    <string name="key">key</string>
    <string name="title_activity_start">StartActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="button_text_previous">Previous</string>

    <string name="button_text_complete">Complete</string>
    <string name="button_text_next">Next</string>


    <string name="first_bubble_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer dolor purus\n</string>
    <string name="first_bubble_title">Lorem ipsum</string>

    <string name="second_bubble_title">Ut at urna </string>
    <string name="second_bubble_description">Ut at urna non nibh viverra consequat. In a nibh a elit feugiat sagittis.\n</string>

    <string name="third_bubble_title">Aliquam vel dolor</string>
    <string name="third_bubble_description">- aliquam vel dolor justo. Quisque posuere mollis turpis, eget scelerisque risus maximus vitae.</string>
    <string name="onboaring_with_motionlayout">Onboaring with MotionLayout</string>
    <string name="recent">Recent</string>

    <string name="friends">Friends</string>
    <string name="cancel">Cancel</string>
    <string name="accept">Accept</string>
    <string name="media">Media</string>
    <string name="camera">Camera</string>
    <string name="choose_media_location">Choose Media Location</string>
    <string name="sign_in">Sign in</string>
    <string name="user_pref_name">userPref</string>
    <string name="saved_default_dp_link"><![CDATA["https://firebasestorage.googleapis.com/v0/b/the-hymnary.appspot.com/o/userDisplayPictures%2FYGZ7vihZbOPnlL5n4s7Eb8W13ey1%2Fdp?alt=media&token=2f767c03-25e2-429c-9675-203b738a8e3b "]]></string>
    <string name="user_pref_key">User Pref State Key</string>
    <string name="user_pref_string_key">userDpLink</string>
</resources>