<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_nav_graph"
    app:startDestination="@id/rchFragment">

    <fragment
        android:id="@+id/rchFragment"
        android:name="dev.mrbe.hymnary.RchFragment"
        android:label="@string/revised_church_hymnary"
        tools:layout="@layout/fragment_rch">
        <!--        <action-->
        <!--            android:id="@+id/action_homeFragment_to_contentFragment"-->
        <!--            app:destination="@id/contentFragment" />-->
    </fragment>
    <fragment
        android:id="@+id/contentFragment"
        android:name="dev.mrbe.hymnary.content.ContentFragment"
        android:label="fragment_content"
        tools:layout="@layout/fragment_content">
        <argument
            android:name="arg_hymn"
            app:argType="dev.mrbe.hymnary.Hymn" />
    </fragment>
    <fragment
        android:id="@+id/favoritesFragment"
        android:name="dev.mrbe.hymnary.FavoritesFragment"
        android:label="fragment_favorites"
        tools:layout="@layout/fragment_favorites" />
    <fragment
        android:id="@+id/myHymnsFragment"
        android:name="dev.mrbe.hymnary.MyHymnsFragment"
        android:label="fragment_my_hymns"
        tools:layout="@layout/fragment_my_hymns">
        <action
            android:id="@+id/action_myHymnsFragment_to_hymnsFormFragment"
            app:destination="@id/hymnsFormFragment" />
    </fragment>
    <fragment
        android:id="@+id/sssFragment"
        android:name="dev.mrbe.hymnary.SssFragment"
        android:label="@string/sss_title_string"
        tools:layout="@layout/fragment_sss" />
    <fragment
        android:id="@+id/phbFragment"
        android:name="dev.mrbe.hymnary.PhbFragment"
        android:label="@string/phb_title_string"
        tools:layout="@layout/fragment_phb" />
    <fragment
        android:id="@+id/hymnsFormFragment"
        android:name="dev.mrbe.hymnary.HymnsFormFragment"
        android:label="hymns_form_fragment"
        tools:layout="@layout/hymns_form_fragment" />
    <fragment
        android:id="@+id/splashFragment"
        android:name="dev.mrbe.hymnary.SplashFragment"
        android:label="fragment_splash"
        tools:layout="@layout/fragment_splash">
        <action
            android:id="@+id/action_splashFragment_to_rchFragment"
            app:destination="@id/rchFragment"
            app:popUpTo="@id/splashFragment"
            app:popUpToInclusive="true" />
    </fragment>
</navigation>