<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textAlignment="center">

        <com.mikhaellopez.circularimageview.CircularImageView
            android:id="@+id/circularImageView"
            android:layout_width="150dp"
            android:layout_height="150dp"
            app:civ_border_color="@color/color_onboarding_page1"
            app:civ_border_width="4dp"
            app:civ_shadow="true"
            app:civ_shadow_gravity="bottom"
            app:civ_shadow_radius="@dimen/small_space"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_book" />

        <TextView
            android:id="@+id/user_language_pref_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="@+id/circularImageView"
            app:layout_constraintStart_toStartOf="@+id/circularImageView"
            app:layout_constraintTop_toBottomOf="@+id/circularImageView"
            tools:text="en" />


        <androidx.cardview.widget.CardView
            android:id="@+id/prof_tiles_card_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/small_space"
            android:layout_marginTop="@dimen/large_space"
            android:layout_marginEnd="@dimen/small_space"
            app:cardElevation="@dimen/tiny_space"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/user_language_pref_text">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/tiles_constraint_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/small_space">

                <ImageView
                    android:id="@+id/prof_favs_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/tiles_constraint_view"
                    app:srcCompat="@drawable/ic_baseline_favorite_24" />

                <TextView
                    android:id="@+id/prof_favs_text"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_marginStart="@dimen/normal_space"
                    android:text="@string/favorites"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="@+id/prof_favs_image"
                    app:layout_constraintStart_toEndOf="@+id/prof_favs_image"
                    app:layout_constraintTop_toTopOf="@+id/prof_favs_image"
                    tools:text="Favorites" />

                <ImageView
                    android:id="@+id/prof_friends_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/normal_space"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/prof_myHymns_image"
                    app:srcCompat="@drawable/ic_baseline_people_24" />

                <TextView
                    android:id="@+id/prof_friends_text"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_marginStart="@dimen/normal_space"
                    android:text="@string/friends"
                    app:layout_constraintBottom_toBottomOf="@+id/prof_friends_image"
                    app:layout_constraintStart_toEndOf="@+id/prof_friends_image"
                    app:layout_constraintTop_toTopOf="@id/prof_friends_image"
                    tools:text="Friends" />

                <ImageView
                    android:id="@+id/prof_myHymns_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/normal_space"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/prof_favs_image"
                    app:srcCompat="@drawable/ic_baseline_menu_book_24" />

                <TextView
                    android:id="@+id/prof_myHymns_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/normal_space"
                    android:text="@string/my_hymns"
                    app:layout_constraintBottom_toTopOf="@+id/prof_friends_image"
                    app:layout_constraintStart_toEndOf="@+id/prof_myHymns_image"
                    app:layout_constraintTop_toBottomOf="@+id/prof_favs_image"
                    tools:text="@string/my_hymns" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_marginStart="@dimen/normal_space"
                    android:text="TextView"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="@+id/prof_favs_text"
                    app:layout_constraintStart_toEndOf="@+id/imageView"
                    app:layout_constraintTop_toTopOf="@+id/prof_favs_text" />

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/small_space"
                    app:layout_constraintStart_toStartOf="@+id/guideline3"
                    app:layout_constraintTop_toTopOf="@+id/textView"
                    app:srcCompat="@drawable/ic_baseline_people_24" />

                <TextView
                    android:id="@+id/mockText"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_marginStart="@dimen/normal_space"
                    android:text="TextView"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="@+id/prof_myHymns_text"
                    app:layout_constraintStart_toEndOf="@+id/imageView3"
                    app:layout_constraintTop_toTopOf="@+id/prof_myHymns_text" />

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/small_space"
                    app:layout_constraintBottom_toBottomOf="@+id/mockText"
                    app:layout_constraintStart_toStartOf="@+id/guideline3"
                    app:layout_constraintTop_toTopOf="@+id/mockText"
                    app:srcCompat="@drawable/ic_baseline_add_circle_24" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/normal_space"
                    android:layout_marginTop="@dimen/normal_space"
                    android:text="TextView"
                    android:textSize="16sp"
                    app:layout_constraintStart_toEndOf="@+id/imageView4"
                    app:layout_constraintTop_toBottomOf="@+id/mockText" />

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/small_space"
                    app:layout_constraintBottom_toBottomOf="@+id/textView3"
                    app:layout_constraintStart_toStartOf="@+id/guideline3"
                    app:layout_constraintTop_toTopOf="@+id/textView3"
                    app:srcCompat="@drawable/ic_baseline_menu_book_24" />


                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_begin="187dp" />
            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.cardview.widget.CardView>

        <ImageView
            android:id="@+id/recent_items_image"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/small_space"
            app:layout_constraintBottom_toBottomOf="@+id/textView4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/textView4"
            app:srcCompat="@drawable/ic_baseline_history_24" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/small_space"
            android:layout_marginTop="24dp"
            android:text="@string/recent"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/recent_items_image"
            app:layout_constraintTop_toBottomOf="@id/prof_tiles_card_view"
            tools:text="Recent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/recent_items_card_view"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/small_space"
            android:layout_marginTop="@dimen/small_space"
            android:layout_marginEnd="@dimen/small_space"
            android:layout_marginBottom="@dimen/small_space"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recent_items_image">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/recent_constraint_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="0dp"
                    android:layout_height="369dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <ImageView
            android:id="@+id/profie_select_media_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/circularImageView"
            app:layout_constraintEnd_toEndOf="@+id/circularImageView"
            app:layout_constraintTop_toBottomOf="@+id/circularImageView"
            app:srcCompat="@drawable/ic_baseline_photo_camera_24" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>